--- a/client/templates/client/partials/navbar.html
+++ b/client/templates/client/partials/navbar.html
@@ -29,12 +29,20 @@
                 <span>Manage Modules</span>
             </a>
         </li>
-        <li></li>
+        <li>
             <a href="{% url 'client_modules' %}" class="{%if request.path == '/client_modules/' %}active{% endif %}">
                 <img src="{% static 'img/modules.svg' %}" alt="Modules" class="icon">
                 <span>Modules</span>
             </a>
         </li>
+        
+        <li>
+            <a href="{% url 'manage_exercises' %}" class="{%if request.path == '/manage_exercises/' %}active{% endif %}">
+                <img src="{% static 'img/programs.svg' %}" alt="Programs" class="icon">
+                <span>Manage Exercises</span>
+            </a>
+        </li>
+        
         <div class="logout">
             <a href="{% url 'log_out' %}" class="{%if request.path == '/log_out/' %}active{% endif %}">
             <img src="{% static 'img/logout.svg' %}" alt="Logout" class="icon">
