--- a/users/templates/users/log_in.html
+++ b/users/templates/users/log_in.html
@@ -18,6 +18,13 @@
             <h1 class="quote text-center">
                 Your journey back to work starts with a single step—take it with confidence, and we'll guide you the rest of the way.
             </h1>
+
+            {% if error_message %}
+            <div class="error-custom text-center">
+                ⚠️ {{ error_message }} ⚠️
+            </div>
+            {% endif %}
+
             {% if form.non_field_errors %}
                 <div class="error-custom text-center">
                     {% for error in form.non_field_errors %}
